--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,34 @@
         "cityware",
         "security"
     ],
+    "authors": [
+        {
+            "name": "Fabricio S V Xavier",
+            "email": "fabricio@cityware.com.br",
+            "homepage": "http://www.cityware.com.br",
+            "role": "Developer"
+        }
+    ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/cityware/city-security.git"
+        }
+    ],
     "homepage": "https://github.com/cityware/city-security",
     "autoload": {
         "psr-4": {
             "Cityware\\Security\\": "src/"
-        }
+        },
+        "psr-0": {
+            "Cityware\\Security\\": "src/"
+        },
+        "classmap": [
+            "src/"
+        ]
     },
     "require": {
         "php": ">=5.3.23"
-    },
-    "autoload": {
-      "classmap": [
-        "src/"
-      ]
     },
     "require-dev": {
         "zendframework/zend-servicemanager": "~2.5",
